src/test/ui/e0119/issue-28981.rs
use std::ops::Deref;

struct Foo;

impl<Foo> Deref for Foo { } //~ ERROR must be used
//~^ ERROR conflicting implementations

fn main() {}
